Added Update to link

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Odin Recipes</h1>
     <ol>
         <li><a href=recipes/tacorecipe.html> Al Pastor Tacos</a></li>
+        <li><a href="dummylink"> Yeah Buddy</a></li>
     </ol>
 </body>
 </html>
