--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <title>Odin Recipes</title>
 </head>
 <body>
+    
+    <center><img class="block" img src="https://media.giphy.com/media/3ohhwerD13QMADpFlu/giphy.gif" alt="Image did not load"></center>
     <h1>Odin Recipes</h1>
-    <ol>
-        <li><a href=recipes/tacorecipe.html> Al Pastor Tacos</a></li>
-        <li><a href="dummylink"> Yeah Buddy</a></li>
-    </ol>
+    <div id="contents" class="block">
+        <ul>
+            <li><a href="recipes/tacorecipe.html"> Al Pastor Tacos</a></li>
+            <li><a href="recipes/crispytenders.html"> Crispy Honey Mustard Chicken Tenders</a></li>
+            <li><a href="recipes/asiansteak.html"> Asian Marinated Steak</a></li>
+        </ul>
+    </div>
 </body>
 </html>
