index.html changes

--- a/recipes/crispytenders.html
+++ b/recipes/crispytenders.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../css/styles.css" />
+
     <title>Crispy Honey Tenders</title>
 </head>
 <body>
@@ -12,11 +14,18 @@
     <h1>Crispy Honey Chicken Tenders</h1>
 
     <img src="../images/chicken-tenders.jpeg" alt="Did not load">
+    <h2>Description</h2>
+    <p>Chicken tenders are thin strips of boneless, skinless chicken breast that are typically breaded and fried. 
+        They are often served with dipping sauces, such as ketchup, barbecue or buffalo sauce, or honey mustard.</p>
+    <h2>Ingredients</h2>
+
     <ul>
         <li>1 1/2 pounds boneless chicken tenders</li>
         <li>/2 cup French's® Honey Mustard</li>
         <li> (6 oz.) can French's® Original Crispy Fried Onions</li>
     </ul>
+    <h2>Instructions</h2>
+
     <ol>
         <li>CRUSH Crispy Fried Onions in plastic bag with hands or rolling pin. Transfer to pie plate or waxed paper.</li>
         <li>BRUSH chicken with Honey Mustard making sure chicken is well coated.</li>
