--- a/index.html
+++ b/index.html
@@ -4,17 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <title>Odin Recipes</title>
 </head>
 <body>
+    <div class="row">
+        <div class="column">
+            <img src="https://media.giphy.com/media/3ohhwerD13QMADpFlu/giphy.gif" alt="Image did not load"
+            style="width: 200px;
+            height: 200px;">
+        </div>
+        <div class="column">
+            <img src="images/odin-logo.jpg" alt="did not work">
+        </div>
+      </div>
     
-    <center><img class="block" img src="https://media.giphy.com/media/3ohhwerD13QMADpFlu/giphy.gif" alt="Image did not load"></center>
-    <h1>Odin Recipes</h1>
+    <hr>
+    <br>
+    
     <div id="contents" class="block">
         <ul>
-            <li><a href="recipes/tacorecipe.html"> Al Pastor Tacos</a></li>
-            <li><a href="recipes/crispytenders.html"> Crispy Honey Mustard Chicken Tenders</a></li>
-            <li><a href="recipes/asiansteak.html"> Asian Marinated Steak</a></li>
+            <li><a href="recipes/tacorecipe.html"> Al Pastor Tacos</a>
+            <br>
+            <img src="images/taco-image.webp" style="width: 100px;
+                height: 100px;"</li>
+                <br>
+                <br>
+            <li><a href="recipes/crispytenders.html"> Crispy Honey Mustard Chicken Tenders</a>
+                <br>
+                <img src="images/chicken-tenders.jpeg" style="width: 100px;
+                height: 100px;">
+                <br>
+                <br>
+            </li>
+            <li><a href="recipes/asiansteak.html"> Asian Marinated Steak</a>
+                <br>
+            <img src="images/asian-steak.jpeg" style="width: 100px;
+                height: 100px;"></li>
         </ul>
     </div>
 </body>
