--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             height: 200px;">
         </div>
         <div class="column">
-            <img src="images/odin-logo.jpg" alt="did not work">
+            <img src="images/odin-logo.jpeg" alt="did not work">
         </div>
       </div>
     
