changes made to layout, background and styles of the webpages

--- a/index.html
+++ b/index.html
@@ -18,30 +18,31 @@
             <img src="images/odin-logo.jpeg" alt="did not work">
         </div>
       </div>
-    
-    <hr>
-    <br>
-    
-    <div id="contents" class="block">
-        <ul>
-            <li><a href="recipes/tacorecipe.html"> Al Pastor Tacos</a>
-            <br>
-            <img src="images/taco-image.webp" style="width: 100px;
-                height: 100px;"</li>
+      <hr>
+    <div class="background"> 
+        <hr>
+ 
+        <div id="contents" class="block">
+            <ul>
+                <li><a href="recipes/tacorecipe.html"> Al Pastor Tacos</a>
                 <br>
-                <br>
-            <li><a href="recipes/crispytenders.html"> Crispy Honey Mustard Chicken Tenders</a>
-                <br>
-                <img src="images/chicken-tenders.jpeg" style="width: 100px;
-                height: 100px;">
-                <br>
-                <br>
-            </li>
-            <li><a href="recipes/asiansteak.html"> Asian Marinated Steak</a>
-                <br>
-            <img src="images/asian-steak.jpeg" style="width: 100px;
-                height: 100px;"></li>
-        </ul>
+                <img src="images/taco-image.webp" style="width: 100px;
+                    height: 100px;"</li>
+                    <br>
+                    <br>
+                <li><a href="recipes/crispytenders.html"> Crispy Honey Mustard Chicken Tenders</a>
+                    <br>
+                    <img src="images/chicken-tenders.jpeg" style="width: 100px;
+                    height: 100px;">
+                    <br>
+                    <br>
+                </li>
+                <li><a href="recipes/asiansteak.html"> Asian Marinated Steak</a>
+                    <br>
+                <img src="images/asian-steak.jpeg" style="width: 100px;
+                    height: 100px;"></li>
+            </ul>
     </div>
+</div>
 </body>
 </html>
