--- a/recipes/crispytenders.html
+++ b/recipes/crispytenders.html
@@ -9,28 +9,36 @@
     <title>Crispy Honey Tenders</title>
 </head>
 <body>
-    <a href=../index.html> Home</a>
+    <div class="background">
+        <a href=../index.html>&#127968; Home</a>
 
-    <h1>Crispy Honey Chicken Tenders</h1>
+        <h1>Crispy Honey Chicken Tenders</h1>
+        <hr>
+        <img src="../images/chicken-tenders.jpeg" alt="Did not load">
+        <h2>Description</h2>
+        <hr>
 
-    <img src="../images/chicken-tenders.jpeg" alt="Did not load">
-    <h2>Description</h2>
-    <p>Chicken tenders are thin strips of boneless, skinless chicken breast that are typically breaded and fried. 
-        They are often served with dipping sauces, such as ketchup, barbecue or buffalo sauce, or honey mustard.</p>
-    <h2>Ingredients</h2>
+        <p>Chicken tenders are thin strips of boneless, skinless chicken breast that are typically breaded and fried. 
+            They are often served with dipping sauces, such as ketchup, barbecue or buffalo sauce, or honey mustard.</p>
+        <h2>Ingredients</h2>
+        <hr>
 
-    <ul>
-        <li>1 1/2 pounds boneless chicken tenders</li>
-        <li>/2 cup French's® Honey Mustard</li>
-        <li> (6 oz.) can French's® Original Crispy Fried Onions</li>
-    </ul>
-    <h2>Instructions</h2>
 
-    <ol>
-        <li>CRUSH Crispy Fried Onions in plastic bag with hands or rolling pin. Transfer to pie plate or waxed paper.</li>
-        <li>BRUSH chicken with Honey Mustard making sure chicken is well coated.</li>
-        <li>DIP chicken tenders one at a time into onion crumbs, pressing firmly to adhere on all sides. Place chicken on baking sheet.</li>
-        <li>BAKE at 350°F for 20 minutes or until no longer pink in center.</li>
-    </ol>
+        <ul class="ul-lists">
+            <li>1 1/2 pounds boneless chicken tenders</li>
+            <li>1/2 cup French's® Honey Mustard</li>
+            <li> (6 oz.) can French's® Original Crispy Fried Onions</li>
+        </ul>
+        <h2>Instructions</h2>
+        <hr>
+
+
+        <ol class="ol-lists">
+            <li>CRUSH Crispy Fried Onions in plastic bag with hands or rolling pin. Transfer to pie plate or waxed paper.</li>
+            <li>BRUSH chicken with Honey Mustard making sure chicken is well coated.</li>
+            <li>DIP chicken tenders one at a time into onion crumbs, pressing firmly to adhere on all sides. Place chicken on baking sheet.</li>
+            <li>BAKE at 350°F for 20 minutes or until no longer pink in center.</li>
+        </ol>
+</div>
 </body>
 </html>
