--- a/recipes/tacorecipe.html
+++ b/recipes/tacorecipe.html
@@ -8,40 +8,52 @@
     <title>Taco's</title>
 </head>
 <body>
-  <a href=../index.html> Home</a>
-  <br>  
-  <h1>Authentic Tacos al Pastor</h1>
-  <br>
-  <img src= "../images/taco-image.webp" alt="Image did not load">
-  <h3>Description</h3>
-  <p>Tacos al pastor is a quintessential Mexican dish, with tender pork and pineapple marinated in a savory and aromatic chile sauce. 
-    Serve with warm corn tortillas, tomatillos salsa, and lemon or lime wedges.</p>
 
-  <h3>Ingredients</h3>
-  <ul>
-    <li>tomato</li>
-	<li> dried guajillo chile peppers, seeded</li>
-	<li> dried ancho chile peppers, seeded </li>
-	<li> pineapple, sliced 3/4-inch thick</li>
-	<li> cup orange juice </li>
-	<li> onion, quartered </li>
-	<li> cup white vinegar </li>
-	<li> chipotle peppers in adobo sauce  </li>
-	<li> tablespoon salt, or to taste </li>
-	<li> cloves garlic, crushed </li>
-	<li> cloves </li>
-	<li> teaspoon cumin seeds </li>
-	<li> teaspoon dried oregano </li>
-	<li> pounds boneless pork loin, thinly sliced</li>
-  </ul>  
-  <h3>Steps to make Tacos</h3>
-  <ol>
-    <li>Roast, peel, and de-seed the tomatoes. Boil and drain the peppers.</li>
-    <li>Make the marinade in a blender.</li>
-    <li>Marinate pork in the refrigerator for four hours or up to overnight.</li>
-    <li>Grill and chop the remaining pineapple slices.</li>
-    <li>Cook the pork on a grill pan until browned.</li>
-    <li>Chop and serve the pork.</li>    
-  </ol>
+  <div class="background">
+    <a href=../index.html>&#127968; Home</a>
+
+    <br>  
+    <h1>Authentic Tacos al Pastor</h1>
+    <hr>
+    <br>
+    <img src= "../images/taco-image.webp" alt="Image did not load">
+    <h3>Description</h3>
+    <hr>
+
+    <p>Tacos al pastor is a quintessential Mexican dish, with tender pork and pineapple marinated in a savory and aromatic chile sauce. 
+      Serve with warm corn tortillas, tomatillos salsa, and lemon or lime wedges.</p>
+
+    <h3>Ingredients</h3>
+    <hr>
+
+    <ul class="ul-lists">
+      <li>tomato</li>
+    <li> dried guajillo chile peppers, seeded</li>
+    <li> dried ancho chile peppers, seeded </li>
+    <li> pineapple, sliced 3/4-inch thick</li>
+    <li> cup orange juice </li>
+    <li> onion, quartered </li>
+    <li> cup white vinegar </li>
+    <li> chipotle peppers in adobo sauce  </li>
+    <li> tablespoon salt, or to taste </li>
+    <li> cloves garlic, crushed </li>
+    <li> cloves </li>
+    <li> teaspoon cumin seeds </li>
+    <li> teaspoon dried oregano </li>
+    <li> pounds boneless pork loin, thinly sliced</li>
+    </ul>  
+    <h3>Steps to make Tacos</h3>
+    <hr>
+
+    <ol class="ol-lists">
+      <li>Roast, peel, and de-seed the tomatoes. Boil and drain the peppers.</li>
+      <li>Make the marinade in a blender.</li>
+      <li>Marinate pork in the refrigerator for four hours or up to overnight.</li>
+      <li>Grill and chop the remaining pineapple slices.</li>
+      <li>Cook the pork on a grill pan until browned.</li>
+      <li>Chop and serve the pork.</li>    
+    </ol>
+</div>
+
 </body>
 </html>
