updated css bg, logo, and image sizes

--- a/recipes/tacorecipe.html
+++ b/recipes/tacorecipe.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="../styles.css" />
     <title>Taco's</title>
 </head>
 <body>
+  <a href=../index.html>&#127968; Home</a>
 
+  <br>  
+  <h1>Authentic Tacos al Pastor</h1>
   <div class="background">
-    <a href=../index.html>&#127968; Home</a>
 
-    <br>  
-    <h1>Authentic Tacos al Pastor</h1>
     <hr>
     <br>
-    <img src= "../images/taco-image.webp" alt="Image did not load">
+    <img src= "../images/taco-image.webp" class="image" alt="Image did not load">
     <h3>Description</h3>
     <hr>
 
