--- a/recipes/asiansteak.html
+++ b/recipes/asiansteak.html
@@ -4,21 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="../styles.css" />
 
     <title>Asian Marinated Steak</title>
 </head>
 <body>
+<a href=../index.html>&#127968; Home</a>
+<br>
+
+<h1>Asian Marinated Steak</h1>
+<hr>
+<hr>
     <div class="background">
-        <a href=../index.html>&#127968; Home</a>
         <br>
-        <h1>Asian Marinated Steak</h1>
+
         <img src="../images/asian-steak.jpeg" alt="Did not load">
 
         <h2>Description</h2>
+        <hr>
         <p>Asian inspired sauce and its combination of ginger & garlic, mixed with the savory tang of French's Classic Worcestershire Sauce.</p>
         <br>
         <h2>Ingredients</h2>
+        <hr>
     
         <ul>
             <li>1 cup French's® Classic Worcestershire Sauce</li>
@@ -26,12 +33,17 @@
             <li>1 tablespoon minced fresh ginger</li>
             <li>2 pounds boneless loin steaks</li>
         </ul>
+        <br>
+        <br>
         <h2>Instructions</h2>
+        <hr>
         <ol>
             <li> Worcestershire, garlic and ginger in deep dish. Add steak. Refrigerate 30 min. or up to 3 hours. Drain steak.</li>
             <li>GRILL or broil steak over high heat about 15 min. for medium rare, turning once.</li>
             <li>PLACE steak on serving plate; let steak rest 10 min. before slicing. Serve with additional Worcestershire on the side.</li>
         </ol>
+        <br>
+        <br>
     </div>
 </body>
 </html>
