--- a/recipes/crispytenders.html
+++ b/recipes/crispytenders.html
@@ -14,7 +14,7 @@
 
         <h1>Crispy Honey Chicken Tenders</h1>
         <hr>
-        <img src="../images/chicken-tenders.jpeg" alt="Did not load">
+        <img src="../images/chicken-tenders.jpeg" class= images alt="Did not load">
         <h2>Description</h2>
         <hr>
 
