--- a/recipes/asiansteak.html
+++ b/recipes/asiansteak.html
@@ -18,7 +18,7 @@
     <div class="background">
         <br>
 
-        <img src="../images/asian-steak.jpeg" alt="Did not load">
+        <img src="../images/asian-steak.jpeg" class= "image" alt="Did not load">
 
         <h2>Description</h2>
         <hr>
