--- a/recipes/crispytenders.html
+++ b/recipes/crispytenders.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="../styles.css" />
 
     <title>Crispy Honey Tenders</title>
 </head>
@@ -14,7 +14,7 @@
 
         <h1>Crispy Honey Chicken Tenders</h1>
         <hr>
-        <img src="../images/chicken-tenders.jpeg" class= images alt="Did not load">
+        <img src="../images/chicken-tenders.jpeg" class= "image" alt="Did not load">
         <h2>Description</h2>
         <hr>
 
